<resources>
    <string name="app_name">TabLayoutTest</string>
    <string name="enter_android_version">Enter Android Version</string>
    <string name="enter_android_code_name">Enter Android Code Name</string>
    <string name="add">Add</string>
    <string name="version">Version</string>
    <string name="code_name">Code Name</string>
    <string name="android_9_0">Android 9.0</string>
    <string name="pie">Pie</string>
    <string name="android_8_0">Android 8.0</string>
    <string name="oreo">Oreo</string>
</resources>